fix: Frost, remove space for t&c as U16 copy is too long

--- a/sass/themes/frost/core/components/_form.scss
+++ b/sass/themes/frost/core/components/_form.scss
@@ -508,12 +508,6 @@ form {
   .form__group--custom_link {
     margin-top: -15px;
   }
-  .form__group--terms_conditions {
-    @include breakpoint($screen-md) {
-      padding-left: 20%;
-      padding-right: 20%;
-    }
-  }
 }
 #giving-page {
   .form__group--terms_conditions {
